Add reflection marker for native hints